--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.0'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.inthecheesefactory.thecheeselibrary:stated-fragment-support-v4:0.9.3'
 }
